<resources>
    <string name="app_name">MiniProject</string>
    <string name="button">Button</string>
    <string name="index">Index</string>
    <string name="edit_user">Edit User</string>
    <string name="add_user">Add User</string>
    <string name="id">ID</string>
    <string name="_1">1</string>
    <string name="edit">Edit</string>
    <string name="address">Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="save">Save</string>
    <string name="add">Add</string>
</resources>
