<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity">

    <TextView
        android:id="@+id/TextView"
        android:layout_width="wrap_content"
        android:layout_height="29dp"
        android:layout_marginStart="168dp"
        android:layout_marginLeft="168dp"
        android:layout_marginTop="102dp"
        android:layout_marginEnd="167dp"
        android:layout_marginRight="167dp"
        android:layout_marginBottom="67dp"
        android:text="@string/edit_user"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="117dp"
        android:layout_marginEnd="29dp"
        android:layout_marginRight="29dp"
        android:layout_marginBottom="35dp"
        app:layout_constraintBottom_toTopOf="@+id/textInputLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.538"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextView">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/AddressInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/address"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="19dp"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="78dp"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:layout_marginBottom="97dp"
        app:layout_constraintBottom_toTopOf="@+id/SaveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/PhoneInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number"
            android:inputType="text" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/SaveBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="130dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="192dp"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>