<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListViewContent">

    <LinearLayout
        android:layout_width="410dp"
        android:layout_height="86dp"
        android:orientation="horizontal"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/ID"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/id"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/Address"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/_1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />

            <TextView
                android:id="@+id/Phone"
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:text="@string/_1"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="#000" />
        </LinearLayout>

        <Button
            android:id="@+id/edit"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:text="@string/edit"
            android:textColor="#000" />

        <Button
            android:id="@+id/delete"
            android:layout_width="78dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Delete" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>